Added lamp address to config page.

--- a/pebble/config/index.html
+++ b/pebble/config/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class='item-container'>
-    <h1 class='title'>Watchface<br>Configuration Page</h1>
+    <h1 class='title'>Sparky<br>Configuration Page</h1>
   </div>
 
   <div class='item-container'>
@@ -19,6 +19,17 @@
       </div>
     </div>
   </div>
+  
+	  <div class="item-container">
+	  <div class="item-container-header">Lamp Address</div>
+	  <div class="item-container-content">
+		<label class="item">
+		  <div class="item-input-wrapper">
+			<input type="text" class="item-input" name="lamp_address" placeholder="Lamp Address">
+		  </div>
+		</label>
+	  </div>
+	</div>
 
   <div class='item-container'>
     <div class='item-container-header'>Customizability</div>
